fix: stop footer from overlapping page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,4 +3,8 @@
     padding: 1vh 3vw;
     margin: auto;
     height: 98vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
