--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,15 +1,7 @@
-.wrapper {
-  position: fixed;
-  width: 100%;
-  left: 0;
-  bottom: 0;
+footer {
+  font-weight: 700;
+  color: var(--primary-color);
+  font-size: 16px;
   text-align: center;
-
-  footer {
-    font-weight: 700;
-    color: var(--primary-color);
-    font-size: 16px;
-    text-align: center;
-    padding: 2vh 0;
-  }
+  padding: 2vh 0;
 }
